--- a/jun5/templates/base.html
+++ b/jun5/templates/base.html
@@ -10,7 +10,13 @@
         <nav>
             <ul>
                 <li><a href="{% url 'index' %}">Página Inicial</a></li>
-                <li><a href="{% url 'create' %}">Criar Evento</a></li>
+                {% if user.is_authenticated %}
+                    <li><a href="{% url 'create' %}">Criar Evento</a></li>
+                    <li><a href="{% url 'logout' %}">Logout</a></li>
+                {% else %}
+                    <li><a href="{% url 'signup' %}">Sign Up</a></li>
+                    <li><a href="{% url 'login' %}">Login</a></li>
+                {% endif %}
             </ul>
         </nav>
     </header>
