--- a/jun5/templates/register/logout.html
+++ b/jun5/templates/register/logout.html
@@ -5,4 +5,5 @@
 {% block content %}
     <h2>Você saiu da sua conta.</h2>
     <a href="{% url 'login' %}">Login novamente</a>
+    <a href="{% url 'index' %}">Voltar</a>
 {% endblock %}
