--- a/jun5/templates/register/login.html
+++ b/jun5/templates/register/login.html
@@ -4,15 +4,24 @@
 
 {% block content %}
     <h2>Login</h2>
-    {% if error %}
-        <p style="color: red;">{{ error }}</p>
+    {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+                <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+            {% endfor %}
+        </ul>
     {% endif %}
     <form method="post">
         {% csrf_token %}
-        <label for="usuario">Usuário:</label>
-        <input type="text" name="criador" id="usuario" required>
-        <label for="senha">Senha:</label>
-        <input type="password" name="senha" id="senha" required>
+        {{ log_in.non_field_errors }}
+        <label for="username">Usuário:</label>
+        <input type="text" name="username" id="username" value="{{ log_in.username.value|default_if_none:'' }}" required>
+        {{ log_in.username.errors }}
+
+        <label for="password">Senha:</label>
+        <input type="password" name="password" id="password" required>
+        {{ log_in.password.errors }}
+
         <button type="submit">Login</button>
     </form>
 {% endblock %}
