--- a/jun5/templates/index.html
+++ b/jun5/templates/index.html
@@ -6,7 +6,7 @@
     <ul>
         {% for evento in eventos %}
             <li>
-                {{ evento.titulo }} - {{ evento.data_inicio }} - {{ evento.local }}
+                <a href="{% url 'details' evento.id %}">{{ evento.titulo }}</a> - {{ evento.data_inicio }} - {{ evento.local }}
                 <a href="{% url 'edit' evento.id %}">Editar</a>
                 <form action="{% url 'delete' evento.id %}" method="post" style="display: inline;">
                     {% csrf_token %}
