--- a/jun5/templates/create.html
+++ b/jun5/templates/create.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 
+{% block title %}Criar novo evento{% endblock %}
 
 {% block content %}
     <h2>Criação de Evento</h2>
