--- a/jun5/templates/delete.html
+++ b/jun5/templates/delete.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %}Deletar evento{% endblock %}
+
 {% block content %}
     <h2>Você tem certeza que deseja deletar o evento "{{ evento.titulo }}"?</h2>
     <form method="post">
