--- a/jun5/templates/edit.html
+++ b/jun5/templates/edit.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %}Editar evento{% endblock %}
+
 {% block content %}
     <h2>Edição de Evento</h2>
     <form method="post">
