--- a/jun5/templates/index.html
+++ b/jun5/templates/index.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %}Página Inicial{% endblock %}
+
 {% block content %}
     <h2>Eventos</h2>
     <a href="{% url 'create' %}">Criar Novo Evento</a>
