--- a/jun5/templates/base.html
+++ b/jun5/templates/base.html
@@ -12,6 +12,7 @@
                 <li><a href="{% url 'index' %}">Página Inicial</a></li>
                 {% if user.is_authenticated %}
                     <li><a href="{% url 'create' %}">Criar Evento</a></li>
+                    <li><a href="{% url 'chat' %}">Chat</a></li>
                     <li><a href="{% url 'logout' %}">Logout</a></li>
                 {% else %}
                     <li><a href="{% url 'signup' %}">Sign Up</a></li>
