fixing edit form

--- a/jun5/templates/details.html
+++ b/jun5/templates/details.html
@@ -17,4 +17,6 @@
             <button type="submit">Deletar</button>
         </form>
     {% endif %}
+    <a href="{% url 'index' %}">Voltar</a>
+
 {% endblock %}
