--- a/jun5/templates/base.html
+++ b/jun5/templates/base.html
@@ -1,8 +1,10 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %} | Jun5 Eventos</title>
+    <link rel="stylesheet" href="{% static 'styles.css' %}">
 </head>
 <body>
 <header>
